objects/maps__MarkerLayer__c.object
<CustomObject>
    <fields>
        <fullName>maps__ActivityFilter__c</fullName>
        <label>Activity Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__AdvancedOptions__c</fullName>
        <label>Advanced Options</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__BaseObject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Base Object</label>
        <referenceTo>maps__BaseObject__c</referenceTo>
        <relationshipName>Saved_Queries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__ColorAssignmentType__c</fullName>
        <label>Color Assignment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Static</fullName>
                </value>
                <value>
                    <fullName>Dynamic, Field</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__ColorAssignment__c</fullName>
        <label>Color Assignment</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__ColorsAssignedDynamically__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Colors Assigned Dynamically</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__CustomQuery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Query</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>maps__FilterLogic__c</fullName>
        <label>Filter Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Folder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Folder</label>
        <referenceTo>maps__Folder__c</referenceTo>
        <relationshipLabel>Maps Saved Queries</relationshipLabel>
        <relationshipName>Saved_Queries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__IconColor__c</fullName>
        <label>Icon Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__MaxQuerySizeExternal__c</fullName>
        <label>Max Query Size External Objs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__MaxQuerySize__c</fullName>
        <label>Max Query Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__OrgWide__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Organization Wide</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__OwnerFilterId__c</fullName>
        <label>OwnerFilterId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__PicklistField__c</fullName>
        <label>Picklist Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__ProximityOptions__c</fullName>
        <label>Proximity Options</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__QueryComponents__c</fullName>
        <label>Query Components</label>
        <summaryForeignKey>maps__MarkerLayerComponent__c.maps__MarkerLayer__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>maps__QueryKey__c</fullName>
        <label>Query Key</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__Query__c</fullName>
        <label>Query</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__RefreshInterval__c</fullName>
        <label>Refresh Interval</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__RelatedListCount__c</fullName>
        <label>Related List Count</label>
        <summaryForeignKey>maps__MarkerLayerRelatedList__c.maps__SavedQuery__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>maps__RoleId__c</fullName>
        <label>RoleId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__RowLimit__c</fullName>
        <defaultValue>250000</defaultValue>
        <label>Row Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__RowOrderDirection__c</fullName>
        <label>Row Order Direction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__RowOrder__c</fullName>
        <label>Row Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__ShapeAssignment__c</fullName>
        <label>ShapeAssignment</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__ShapeField__c</fullName>
        <label>Shape Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Tooltip10__c</fullName>
        <label>Tooltip Ten</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Tooltip11__c</fullName>
        <label>Tooltip Eleven</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Tooltip12__c</fullName>
        <label>Tooltip Twelve</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Saved_Queries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Maps Marker Layer</label>
    <listViews>
        <fullName>maps__All</fullName>
        <columns>NAME</columns>
        <columns>maps__PicklistField__c</columns>
        <columns>maps__OrgWide__c</columns>
        <columns>maps__BaseObject__c</columns>
        <columns>maps__Tooltip8__c</columns>
        <columns>maps__Tooltip5__c</columns>
        <columns>maps__Tooltip4__c</columns>
        <columns>maps__Tooltip1__c</columns>
        <columns>maps__Tooltip7__c</columns>
        <columns>maps__Tooltip6__c</columns>
        <columns>maps__Tooltip3__c</columns>
        <columns>maps__Tooltip2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Maps Marker Layer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Marker Layers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>